--- a/src/main/res/layout/layout.xml
+++ b/src/main/res/layout/layout.xml
@@ -16,7 +16,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/tv_project_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
